--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -197,6 +197,10 @@
       <!-- Fim Empenho>Credor Form -->
 
       <!-- Início Empenho>Orçamentário Form -->
+    <div class="container">
+    <div class="panel panel-primary">
+    <div class="panel-heading">Credor</div>
+    <div class="panel-body"> 
 
       <div formGroupName="orcamentario">
      
@@ -324,7 +328,11 @@
         <div class="form-group">
           <button class="btn btn-default">Verificar Disponibilidade</button>
         </div>
-      </div> 
+      </div>
+  </div> <!-- panel-body -->
+  </div> <!-- panel panel-primary -->
+  </div> <!-- FIM DO CONTAINER CREDOR -->
+       
 
       <!-- Fim Empenho>Orçamentário Form -->
 
